<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:id="@+id/recipe_background"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/short_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>