<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ingredients: "
        android:textSize="24dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:paddingStart="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingred"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:textColor="#000"
        android:paddingStart="8dp"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>