<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/thumbnail"/>
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/videoPlayer" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_instruction"
        android:id="@+id/recipeInstruction"
        android:textSize="20sp"
        android:textColor="#000"
        android:paddingStart="@dimen/spacing"
        android:paddingEnd="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_marginBottom="@dimen/spacing">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_recipe"
            android:id="@+id/backBtn"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_recipe"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:id="@+id/nextBtn"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>

</ScrollView>