...
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="previous_recipe">Previous recipe</string>
    <string name="next_recipe">Next recipe</string>
    <string name="recipe_instruction">Recipe Instruction</string>
</resources>

